# n_queens_problem_rust

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  astro.config.mjs  mkdocs.yml  package-lock.json  package.json
.github/workflows/: pages.yml  rust-clippy.yml  rust.yml  wiki-sync.yml
benches/: ga.rs
docs/: index.md
examples/: parameter_sweep.rs
src/: ga.rs  gui.rs  lib.rs  main.rs  tui.rs  ui.rs
src/content/docs/: index.md
src/ga/: chromosome.rs
tests/: cli.rs
