[package]
name = "n_queens_problem"
version = "0.1.0"
edition = "2024"
default-run = "n_queens_problem"

[dependencies]
rand = "0.10"
log = "0.4"
simple_logger = "5.0"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
serde_json = "1.0"
eframe = { version = "0.33", optional = true, default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }

[features]
default = []
gui = ["dep:eframe"]

[dev-dependencies]
criterion = "0.5"
proptest = "1.6"

[[bin]]
name = "n_queens_problem"
path = "src/main.rs"

[[bin]]
name = "n_queens_gui"
path = "src/bin/n_queens_gui.rs"
required-features = ["gui"]

[[bench]]
name = "ga"
harness = false
